# crazed

./: .gitignore  README.md  docker-compose.yml
crazed/: .dockerfile  Cargo.toml
crazed/src/: main.rs
crazed/src/commands/general/: avatar.rs  eval.rs  mod.rs  userinfo.rs
crazed/src/hooks/: mod.rs
crazed/src/utils/: http.rs  mod.rs
exec/: .dockerfile  Cargo.toml
exec/src/: main.rs
