[package]
name = "crazed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
chrono = "0.4.19"
reqwest="0.11.6"
dotenv = "0.15.0"
regex = "1.5.4"
lazy_static = "1.4.0"
serenity= { version="0.10.10",features = ["default","standard_framework", "framework","model","client", "gateway", "unstable_discord_api"] }