[package]
name = "exec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version= "0.5.0-rc.1",features=["default","json","msgpack"] }
serde_json = "1.0.79"
serde = {version = "1.0.136", features = ["derive"]}
tokio = {version = "1.17.0", features = ["full"]}
uuid = {version = "1.0.0-alpha.1", features = ["v4"]}